@@ -1,6 +1,10 @@
 # ChangeLog for app-office/libreoffice
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.458 2013/04/09 11:38:53 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.459 2013/04/19 10:42:14 scarabeus Exp $
+
+  19 Apr 2013; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-4.0.2.2.ebuild,
+  libreoffice-4.0.9999.ebuild, libreoffice-9999-r2.ebuild:
+  Update orcus deps to reflect reality.
 
 *libreoffice-3.6.6.2 (09 Apr 2013)
 
